<resources>
    <string name="app_name">ArtisanLane</string>
    <string name="app_name_cd">ArtisanLane Logo</string>
    <string name="user_name">Bimidu Gunathilake</string>
    <string name="acc_type">Buyer and Seller Account</string>
    <string name="acc_email">bimidugunathilake@gmail.com</string>
    <string name="acc_location">Kurunegala, Sri Lanka</string>

    <string name="welcome01_title">A place for local artists</string>
    <string name="welcome01_desc">Discover a vibrant space for local artists to showcase and collaborate. Celebrate creativity with us!</string>

    <string name="welcome02_title">Explore local handmade crafts</string>
    <string name="welcome02_desc">Discover locally crafted treasures, celebrating community artistry and creativity.</string>

    <string name="welcome03_title">Sell your products directly</string>
    <string name="welcome03_desc">Directly sell your products for seamless transactions and enhanced customer satisfaction.</string>

    <string name="home">Home</string>
    <string name="home_desc">See featured products, categories and recommendations.</string>
    <string name="featured">Featured</string>
    <string name="recommende_for_you">Recommended For You</string>
    <string name="see_all">See All</string>
    <string name="more_categories">More Categories</string>
    <string name="categories">Categories</string>

    <string name="notifications">Notifications</string>
    <string name="notification_test">Discover the latest masterpiece just added to ArtisanLane. Explore now!</string>
    <string name="notification_date">March 1, 2023</string>

    <string name="explore">Explore</string>
    <string name="explore_desc">Explore local artist created artworks.</string>
    <string name="search_hint">Search for all products</string>



    <string name="item1_name">Sri Lankan Traditional Mask</string>
    <string name="item1_desc">This mask is used as a home and wall decoration, expecting good fortune.</string>
    <string name="item1_price">LKR 1234.00</string>

    <string name="item2_name">Decorated Storage Bins</string>
    <string name="item2_desc">These bins can be used for a variety of applications</string>
    <string name="item2_price">LKR 1234.00</string>

    <string name="item3_name">Cane Baskets</string>
    <string name="item3_desc">These baskets can be used for a variety of applications</string>
    <string name="item3_price">LKR 1234.00</string>

    <string name="item4_name">Stone Elephant Sculpture</string>
    <string name="item4_desc">These elephants can be used for a variety of applications</string>
    <string name="item4_price">LKR 1234.00</string>

    <string name="item5_name">Ceramic Pots</string>
    <string name="item5_desc">These pots can be used for a variety of applications</string>
    <string name="item5_price">LKR 1234.00</string>

    <string name="item6_name">Kandyan Mask</string>
    <string name="item6_desc">These masks can be used for a variety of applications</string>
    <string name="item6_price">LKR 1234.00</string>

    <string name="item7_name">Pen Holder</string>
    <string name="item7_desc">These holders can be used for a variety of applications</string>
    <string name="item7_price">LKR 1234.00</string>

    <string name="category_1">Paintings and Drawings</string>
    <string name="category_2">Sculptures and Carvings</string>
    <string name="category_3">Jewelry and Accessories</string>
    <string name="category_4">Pottery and Ceramics</string>
    <string name="category_5">Textiles and Fiber Arts</string>
    <string name="category_6">Glass Art</string>
    <string name="category_7">Woodworking</string>
    <string name="category_8">Photography</string>
    <string name="category_9">Printmaking</string>
    <string name="category_10">Metalwork</string>
    <string name="category_11">Mixed Media and Collage</string>
    <string name="category_12">Digital Art and Illustration</string>
    <string name="category_13">Candles and Home Fragrance</string>
    <string name="category_14">Leather Goods</string>
    <string name="category_15">Handmade Soaps and Skincare Products</string>
    <string name="category_16">Upcycled and Recycled Art</string>
    <string name="category_17">Miniatures and Dioramas</string>
    <string name="category_18">Embroidery and Needlework</string>
    <string name="category_19">Musical Instruments</string>
    <string name="category_20">Paper Crafts and Origami</string>


    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="finish">Finish</string>
    <string name="image">image</string>
    <string name="buy">Buy</string>

    <string name="profile">Profile</string>
    <string name="my_products">My Products</string>
    <string name="achievements">Achievements</string>
    <string name="transactions">Transactions</string>
    <string name="subscription">Subscription</string>

    <string name="preferences">Preferences</string>
    <string name="security_settings">Security Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="activity_history">Activity History</string>
    <string name="log_out">Log Out</string>

    <string name="my_details">Y A G B M Gunathilake\n
IT22240088\n
Made for MAD Lab Exam 02\n
10.03.2024</string>

</resources>