<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".Welcome_01Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_medium"
            android:text="@string/welcome01_title"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="209dp"
            android:layout_height="190dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/pexels_dominika_roseclay_2146109" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/circularstd_book"
            android:lineSpacingExtra="8sp"
            android:text="@string/welcome01_desc"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/dark_grey"
            android:drawableEnd="@drawable/arrow_right"

            android:drawableTint="@color/light_grey"
            android:fontFamily="@font/circularstd_medium"
            android:text="@string/next"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>