<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".Categories_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:baselineAligned="false"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/baseline_arrow_back_ios_24"
                    app:iconSize="36dp"
                    app:iconTint="@color/dark_grey" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circularstd_medium"
                    android:text="@string/featured"
                    android:textColor="@color/dark_grey"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_1"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_2"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_3"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_4"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_5"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_6"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_7"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="@color/subtle_dark"
                    android:fontFamily="@font/circularstd"
                    android:text="@string/category_8"
                    android:textSize="18sp"
                    app:cornerRadius="10dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>